madisoncity.k12.al.us: Search button is not working (Adds Quirks needsFormControlToBeMouseFocusable) https://bugs.webkit.org/show_bug.cgi?id=296989 rdar://157639717

Reviewed by NOBODY (OOPS!).

This is a draft. This is not working yet.
We enter is isMouseFocusable but we are not entering the if. Something
is not right.

* Source/WebCore/html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::isMouseFocusable const):
* Source/WebCore/page/Quirks.cpp:
(WebCore::handleMadisonCityK12Quirks):
(WebCore::Quirks::determineRelevantQuirks):